@@ -94,6 +94,11 @@ Find Toolbar.</td>
 <table>
 <tbody align="left" valign="top">
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3121006);return false;">3121006</a></td>
+<td>Can now change number of databases remembered independently of the
+value of the number of last used entries remembered in System Tray menu. </td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3084401);return false;">3084401</a></td>
 <td>When database is locked, clipboard is cleared and the hotkey works.</td>
 </tr>
